# ComfyUI-FlowMatching-Upscaler

./: .gitignore  CHANGES.md  CLAUDE.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt  test.sh  upscaling.md
.github/workflows/: publish.yml
docs/: LEARNINGS.md
examples/: Method-Comparison.json
src/: __init__.py  dype_qwen_image.py  flow_matching_upscaler.py  latent_mesh_drag.py  latent_upscale_advanced.py  qwen_spatial.py  rope.py
tests/: conftest.py  test_dype_qwen_image.py  test_flow_matching_upscaler.py  test_latent_mesh_drag.py  test_latent_upscale_advanced.py
web/: preview.js
